# gofile-dav

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: cd.yml  release-plz.yml
src/: config.rs  main.rs  upgrade.rs
src/gofile/: client.rs  dav.rs  dircache.rs  error.rs  mod.rs  model.rs  wt_generator.rs
