[package]
name = "gofile-dav"
version = "0.1.4"
authors = ["Synthlace <synthlace@gmail.com>"]
description = "a WebDAV implementation for the gofile.io service"
repository = "https://github.com/synthlace/gofile-dav"
license = "MIT OR Apache-2.0"
keywords = ["webdav", "gofile", "serve", "http", "server"]
categories = [
    "command-line-utilities",
    "network-programming",
    "filesystem",
    "web-programming::http-server",
    "api-bindings",
]
edition = "2024"

[profile.release]
opt-level = "z"
strip = true
lto = true
codegen-units = 1
panic = "abort"

[dependencies]
self_update = { version = "0.42", default-features = false, features = [
    "archive-tar",
    "archive-zip",
    "compression-flate2",
    "compression-zip-deflate",
    "rustls",
] }
async-recursion = "1.1"
anyhow = "1.0"
actix-web = { version = "4", features = ["rustls"] }
thiserror = "2"
bytes = "1"
futures-util = "0.3"
dav-server = { version = "0.8.0", features = ["actix-compat"] }
env_logger = "0.11"
log = "0.4"
reqwest = { version = "0.12", default-features = false, features = [
    "json",
    "stream",
    "rustls-tls",
] }
reqwest-middleware = "0.4"
reqwest-retry = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
percent-encoding = "2"
tokio = { version = "1", features = ["full"] }
url = "2"
clap = { version = "4", features = ["derive", "env"] }
uuid = { version = "1", features = ["v4", "serde"] }
sha256 = { version = "1.6", default-features = false }

[dev-dependencies]
rstest = "0.26"
